sfdx-source/force-app/main/default/objects/Brand_Association__c/Brand_Association__c.object-meta.xml
<CustomObject>
    <description>LEM-564: This object represents the association between a brand and a business account.</description>
    <label>Brand Association</label>
    <nameField>
        <displayFormat>BA - {0000}</displayFormat>
        <label>Brand Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Associations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>