sfdx-source/force-app/main/default/objects/Brand_Association__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-564: This field represents the Brand associated with the Business account.</description>
    <inlineHelpText>Represents the Brand associated with the Business account.</inlineHelpText>
    <label>Brand (Name)</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Brand Associations</relationshipLabel>
    <relationshipName>Brand_Associations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>