sfdx-source/force-app/main/default/objects/Brand_Association__c/fields/Business_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-564: This field represents the Business account associated with the Brand.</description>
    <inlineHelpText>Represents the Business account associated with the Brand</inlineHelpText>
    <label>Business Account (Name)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Associations</relationshipLabel>
    <relationshipName>Brand_Associations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>