sfdx-source/force-app/main/default/objects/Brand_Association__c/fields/Related_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Brand_Name__c</fullName>
    <description>LEM-3607: Captures the name of the related Brand</description>
    <formula>Brand_Name__r.Name</formula>
    <label>Related Brand Name</label>
    <type>Text</type>
</CustomField>