sfdx-source/force-app/main/default/objects/Brand_Association__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-564: This field represents the relationship type between the Brand and the Business account.</description>
    <inlineHelpText>Represents the relationship type between the Brand and the Business account</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensee</fullName>
            </value>
            <value>
                <fullName>Licensor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>