sfdx-source/force-app/main/default/objects/Brand_Association__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-564: This field represents the Mx Business Account Type.</description>
    <formula>TEXT (Business_Account_Name__r.Type)</formula>
    <inlineHelpText>Represents the Mx Business Account Type</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>